--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <meta charset="utf-8">
-    <title>Example App</title>
-</head>
-<body>
-
-    {{{body}}}
-
-</body>
+    <head>
+        <meta charset="utf-8">
+        <title>Example App</title>
+    </head>
+    <body>
+        <div class="container" style="align-content: center">
+            {{{body}}}
+        </div>
+    </body>
 </html>
